--- a/Typescript/package.json
+++ b/Typescript/package.json
@@ -1,17 +1,33 @@
 {
-    "name": "typescriptsample",
-    "version": "0.1.0",
+    "name": "deploy",
+    "version": "1.0.0",
     "description": "",
-    "private": "true",
+    "private": true,
     "scripts": {
-      "install": "cd app && npm install && cd ../deploy && npm install",
-      "dev": "concurrently \"npm --prefix ./app run dev\" \"npm --prefix ./deploy run dev\"",
-      "build": "npm --prefix ./app run build && npm --prefix ./deploy run build"
+      "build": "webpack --config webpack.build.config.js --env Chakra=true"
     },
     "keywords": [],
     "author": "",
     "license": "ISC",
     "devDependencies": {
-      "concurrently": "^7.0.0"
+      "html-webpack-plugin": "^5.3.2",
+      "terser-webpack-plugin": "^5.3.0",
+      "webpack": "^5.52.1",
+      "webpack-cli": "^4.8.0",
+      "webpack-dev-server": "^4.2.1",
+      "@babel/core": "^7.23.0",
+      "@babel/plugin-transform-nullish-coalescing-operator": "^7.22.5",
+      "@babel/plugin-transform-optional-chaining": "^7.22.6",
+      "babel-jest": "^26.1.0",
+      "babel-loader": "^9.0.0",
+      "ts-loader": "^9.5.1",
+      "@babel/preset-env": "^7.23.0"
+    },
+    "dependencies": {
+      "@babylonjs/core": "^6.43.0",
+      "@babylonjs/gui": "^6.43.0",
+      "@babylonjs/inspector": "^6.43.0",
+      "@babylonjs/materials": "^6.43.0",
+      "@timohausmann/quadtree-js": "^1.2.5"
     }
   }
