--- a/Dependencies/CMakeLists.txt
+++ b/Dependencies/CMakeLists.txt
@@ -12,7 +12,10 @@ set(BABYLON_NATIVE_BUILD_APPS OFF)
 set(BABYLON_NATIVE_PLUGIN_TESTUTILS OFF)
 set(BABYLON_NATIVE_PLUGIN_NATIVEXR OFF)
 set(BABYLON_NATIVE_PLUGIN_NATIVECAMERA OFF)
-set(NAPI_JAVASCRIPT_ENGINE "Chakra")
+
+if(NOT NAPI_JAVASCRIPT_ENGINE)
+    set(NAPI_JAVASCRIPT_ENGINE "Chakra")
+endif()
 
 add_subdirectory(BabylonNative)
 
